fix table align

--- a/source/its-compiling/_sass/_its-compiling.scss
+++ b/source/its-compiling/_sass/_its-compiling.scss
@@ -114,7 +114,6 @@ hr {
   }
 
   th, td {
-    text-align: center;
     padding: 0.2em 1em;
   }
 
